include/eqp.h


struct eqp_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int factorization;
    int max_col;
    int indmin;
    int valmin;
    int len_ulsmin;
    int itref_max;
    int cg_maxit;
    int preconditioner;
    int semi_bandwidth;
    int new_a;
    int new_h;
    int sif_file_device;
    real_wp_ pivot_tol;
    real_wp_ pivot_tol_for_basis;
    real_wp_ zero_pivot;
    real_wp_ inner_fraction_opt;
    real_wp_ radius;
    real_wp_ min_diagonal;
    real_wp_ max_infeasibility_relative;
    real_wp_ max_infeasibility_absolute;
    real_wp_ inner_stop_relative;
    real_wp_ inner_stop_absolute;
    real_wp_ inner_stop_inter;
    bool find_basis_by_transpose;
    bool remove_dependencies;
    bool space_critical;
    bool deallocate_error_fatal;
    bool generate_sif_file;
    char sif_file_name[31];
    char prefix[31];
    struct fdc_control_type fdc_control;
    struct sbls_control_type sbls_control;
    struct gltr_control_type gltr_control;
};
struct eqp_time_type {
    real_wp_ total;
    real_wp_ find_dependent;
    real_wp_ factorize;
    real_wp_ solve;
    real_wp_ solve_inter;
    real_wp_ clock_total;
    real_wp_ clock_find_dependent;
    real_wp_ clock_factorize;
    real_wp_ clock_solve;
};
struct eqp_inform_type {
    int status;
    int alloc_status;
    char bad_alloc[81];
    int cg_iter;
    int cg_iter_inter;
    int factorization_integer;
    int factorization_real;
    real_wp_ obj;
    struct eqp_time_type time;
    struct fdc_inform_type fdc_inform;
    struct sbls_inform_type sbls_inform;
    struct gltr_inform_type gltr_inform;
};
void eqp_initialize( void **data, 
                     struct eqp_control_type *control,
                     int *status );
void eqp_read_specfile( struct eqp_control_type *control, 
                        const char specfile[] );
void eqp_import( struct eqp_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 int m,
                 const char H_type[], 
                 int H_ne, 
                 const int H_row[],
                 const int H_col[], 
                 const int H_ptr[],
                 const char A_type[], 
                 int A_ne, 
                 const int A_row[],
                 const int A_col[], 
                 const int A_ptr[] );
void eqp_reset_control( struct eqp_control_type *control,
                        void **data,
                        int *status );
void eqp_solve_qp( void **data,
                   int *status,
                   int n, 
                   int m, 
                   int h_ne,
                   const real_wp_ H_val[], 
                   const real_wp_ g[], 
                   const real_wp_ f, 
                   int a_ne,
                   const real_wp_ A_val[], 
                   real_wp_ c[], 
                   real_wp_ x[], 
                   real_wp_ y[] );
void eqp_solve_sldqp( void **data,
                      int *status,
                      int n, 
                      int m, 
                      const real_wp_ w[], 
                      const real_wp_ x0[], 
                      const real_wp_ g[], 
                      const real_wp_ f, 
                      int a_ne,
                      const real_wp_ A_val[], 
                      real_wp_ c[], 
                      real_wp_ x[], 
                      real_wp_ y[] );
void eqp_resolve_qp( void **data,
                     int *status,
                     int n, 
                     int m, 
                     const real_wp_ g[], 
                     const real_wp_ f, 
                     real_wp_ c[], 
                     real_wp_ x[], 
                     real_wp_ y[] );
void eqp_information( void **data,
                      struct eqp_inform_type *inform,
                      int *status );
void eqp_terminate( void **data, 
                    struct eqp_control_type *control, 
                    struct eqp_inform_type *inform );